# n8n-gitops

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: authentication.md  code-externalization.md  commands.md  deployment.md  export.md  getting-started.md  manifest.md  release-process.md  vs-n8n-enterprise-git.md
n8n_gitops/: __init__.py  cli.py  envschema.py  logger.py  manifest.py  n8n_client.py
n8n_gitops/commands/: create_project.py  deploy.py  export_workflows.py
tests/: test_externalization.py  test_manifest.py
